--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,18 @@
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
+      "use": "@vercel/node"
+      
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "index.js",
+      "methods":["GET","POST","PUT","DELETE"],
+      "headers":{
+        "Access-Control-Allow-Origin":"*"
+      }
     }
   ]
 }
