--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
+    "version": 2,
+    "builds": [
+     {
       "src": "index.js",
-      "use": "@vercel/node"
-      
-    }
-  ],
-  "routes": [
-    {
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
+     }
+    ],
+    "routes": [
+     {
       "src": "/(.*)",
-      "dest": "index.js",
-      "methods":["GET","POST","PUT","DELETE"],
-      "headers":{
-        "Access-Control-Allow-Origin":"*"
-      }
-    }
-  ]
-}
+      "dest": "index.js"
+     }
+    ]
+   }
